@@ -63,12 +63,13 @@
         <setting id="remove.captcha" type="bool" label="32341" default="false" />
         <setting id="cf.disable" type="bool" label="32362" default="false" />
         <setting id="remove.dups" type="bool" label="32090" default="true" />
-        <setting id="hosts.sort.provider" type="bool" label="32342" default="true" />
-        <setting id="torr.sort.size" type="bool" label="32113" default="true" />
         <setting id="check.torr.cache" type="bool" label="32114" default="true" />
         <setting id="remove.uncached" type="bool" label="32126" default="false" enable="eq(-1,true)" subsetting="true" />
         <setting id="debrid.text" type="text" label="32115" enable="false" subsetting="true" />
-        <setting id="torrent.min.seeders" type="slider" label="Minimum Seeders" visible="false" default="0" range="0,100" option="int" />
+        <setting type="lsep" label="32142" />
+        <setting id="main.sort" type="enum" label="32143" lvalues="32144|32145" default="0" />
+        <setting id="torr.sort.size" type="bool" label="32113" default="true" />
+        <setting id="hosts.sort.provider" type="bool" label="32342" default="true" />
     </category>
 
     <category label="32345">
